fixing mobile alignment

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header.ul li{
 header ul li a{
     position: relative;
     margin: 0 5px;
+    padding-right: 15px;
     text-decoration: none;
     color: #fff;
     letter-spacing: 2px;
@@ -104,6 +105,18 @@ header.sticky ul li a{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+@media only screen and (max-width: 320px) {
+    #Home {
+        padding-top: 4em;
+        background-image: url(/bg-img/mob-view/1597902764768.jpg);
+        background-color: rgba(119, 115, 115, 0.4);
+    background-blend-mode: lighten;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
 }
 #html {
     scroll-behavior: smooth;
@@ -193,7 +206,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(54, 47, 47);
+    color: rgb(224, 197, 197);
     font-style: italic;
     box-shadow: inset 0 0 0 1000px rgba(110, 105, 105, 0.5);
     background-image: url(/bg-img/2068767.png);
@@ -204,6 +217,25 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     
+}
+@media only screen and (max-width: 320px) {
+    #qoute {
+        width: 100%;
+        padding: 7px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: rgb(224, 197, 197);
+        font-style: italic;
+        box-shadow: inset 0 0 0 1000px rgba(110, 105, 105, 0.5);
+        background-image: url(bg-img/mob-view/bg-center.png);
+        background-color: rgb(54, 47, 47);
+    background-blend-mode: lighten;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
 }
 #contentLink{
     text-decoration: none;
@@ -219,4 +251,16 @@ html {
     color: #fff;
     margin: 0;
     padding: 0;
+}
+.navbar-nav{
+    align-items: flex-end;
+   
+}
+.navText{
+    margin-right: 50px;
+}
+.navbar-nav > li{
+   padding-left: 0;
+   margin-left: 0;
+    padding-right:30px;
 }
